fdo#45651: gtk: fix text color with dark themes

Change-Id: I959b7791151fd345c250016ae8ad315a4615a871